# PokerAxiom

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: calibrated_regions.json  calibration.json  card_slots.json  overlay_settings.json  region_slots.json  stack_bet_slots.json
data/digit_crops/: labels.json
docs/: API.md  ARCHITECTURE.md  CONCEPTS.md  ML_PIPELINE.md
examples/: board_analysis.py  hand_evaluation.py  mdf_calculator.py  strategy_demo.py
models/: digit_classifier.xml  rank_classifier.xml  rank_labels.json
scripts/: arrange_tables.py  calibrate.py  calibrate_card_slots.py  calibrate_regions.py  calibrate_stack_bets.py  capture_dot_templates.py  cleanup_samples.py  extract_cards.py  extract_char_templates.py  label_cards.py  label_digit_crops.py  pick_pixel.py  run_overlay.py  run_strategy.py  test_disambiguation.py  train_classifier.py  train_digit_classifier.py  verify_cards.py  workflow.py
src/: __init__.py  paths.py
src/calibration/: __init__.py  calibration_manager.py  card_slot_calibrator.py  pixel_picker.py  region_calibrator.py  stack_bet_calibrator.py  unified_calibrator.py
src/capture/: __init__.py  debug_capture.py  debug_overlay.py  strategy_overlay.py  window_capture.py  window_manager.py
src/data/: __init__.py  card_extractor.py  card_labeler.py  card_verifier.py
src/detection/: __init__.py  button_detector.py  card_back_detector.py  card_detector.py
src/engine/: __init__.py  base.py  preprocessing.py  results.py  scaling.py
src/ml/: __init__.py  digit_classifier.py  rank_classifier.py
(+27 files in other folders)
